# laia

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  relatorio.tex  requirements.txt
.github/workflows/: 1_continuous_integration.yml  2_continuous_delivery.yml  3_continuous_staging.yml  4_continuous_deployment.yml  docker-ci.yml
.mlruns/0/: meta.yaml
.mlruns/314449792163289134/: meta.yaml
.mlruns/314449792163289134/ed8c5084b9b24b12a49389b231021cbf/: meta.yaml
.mlruns/314449792163289134/ed8c5084b9b24b12a49389b231021cbf/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
artifacts/: model.pkl
src/: api.py  check_real_predictions.py  features.py  offline_test_leaderboard.py  train.py
src/model-promotion/: promote-model.py
src/serving/: Dockerfile  api.py
src/training/: Dockerfile  config.py  train.py  utils.py
tests/: test_api.py  test_train.py
